PPJ/skupovi/parser.output
Grammar

    0 $accept: Program $end

    1 Program: Naredba ';' Program
    2        | Naredba ';'

    3 Naredba: print_token E
    4        | id_token '=' E
    5        | check_token broj_token ':' E
    6        | check_token E '<' E
    7        | card_token E

    8 E: '{' niz_koeficijenata '}'
    9  | broj_token tt_token broj_token
   10  | E unija_token E
   11  | E razlika_token E
   12  | E presek_token E
   13  | id_token

   14 niz_koeficijenata: niz_koeficijenata ',' broj_token
   15                  | broj_token


Terminals, with rules where they appear

    $end (0) 0
    ',' (44) 14
    ':' (58) 5
    ';' (59) 1 2
    '<' (60) 6
    '=' (61) 4
    '{' (123) 8
    '}' (125) 8
    error (256)
    print_token (258) 3
    tt_token (259) 9
    unija_token (260) 10
    presek_token (261) 12
    razlika_token (262) 11
    check_token (263) 5 6
    card_token (264) 7
    broj_token <broj_type> (265) 5 9 14 15
    id_token <string_type> (266) 4 13


Nonterminals, with rules where they appear

    $accept (19)
        on left: 0
    Program (20)
        on left: 1 2
        on right: 0 1
    Naredba (21)
        on left: 3 4 5 6 7
        on right: 1 2
    E <m_set_type> (22)
        on left: 8 9 10 11 12 13
        on right: 3 4 5 6 7 10 11 12
    niz_koeficijenata <m_set_type> (23)
        on left: 14 15
        on right: 8 14


State 0

    0 $accept: . Program $end

    print_token  shift, and go to state 1
    check_token  shift, and go to state 2
    card_token   shift, and go to state 3
    id_token     shift, and go to state 4

    Program  go to state 5
    Naredba  go to state 6


State 1

    3 Naredba: print_token . E

    broj_token  shift, and go to state 7
    id_token    shift, and go to state 8
    '{'         shift, and go to state 9

    E  go to state 10


State 2

    5 Naredba: check_token . broj_token ':' E
    6        | check_token . E '<' E

    broj_token  shift, and go to state 11
    id_token    shift, and go to state 8
    '{'         shift, and go to state 9

    E  go to state 12


State 3

    7 Naredba: card_token . E

    broj_token  shift, and go to state 7
    id_token    shift, and go to state 8
    '{'         shift, and go to state 9

    E  go to state 13


State 4

    4 Naredba: id_token . '=' E

    '='  shift, and go to state 14


State 5

    0 $accept: Program . $end

    $end  shift, and go to state 15


State 6

    1 Program: Naredba . ';' Program
    2        | Naredba . ';'

    ';'  shift, and go to state 16


State 7

    9 E: broj_token . tt_token broj_token

    tt_token  shift, and go to state 17


State 8

   13 E: id_token .

    $default  reduce using rule 13 (E)


State 9

    8 E: '{' . niz_koeficijenata '}'

    broj_token  shift, and go to state 18

    niz_koeficijenata  go to state 19


State 10

    3 Naredba: print_token E .
   10 E: E . unija_token E
   11  | E . razlika_token E
   12  | E . presek_token E

    unija_token    shift, and go to state 20
    presek_token   shift, and go to state 21
    razlika_token  shift, and go to state 22

    $default  reduce using rule 3 (Naredba)


State 11

    5 Naredba: check_token broj_token . ':' E
    9 E: broj_token . tt_token broj_token

    tt_token  shift, and go to state 17
    ':'       shift, and go to state 23


State 12

    6 Naredba: check_token E . '<' E
   10 E: E . unija_token E
   11  | E . razlika_token E
   12  | E . presek_token E

    unija_token    shift, and go to state 20
    presek_token   shift, and go to state 21
    razlika_token  shift, and go to state 22
    '<'            shift, and go to state 24


State 13

    7 Naredba: card_token E .
   10 E: E . unija_token E
   11  | E . razlika_token E
   12  | E . presek_token E

    unija_token    shift, and go to state 20
    presek_token   shift, and go to state 21
    razlika_token  shift, and go to state 22

    $default  reduce using rule 7 (Naredba)


State 14

    4 Naredba: id_token '=' . E

    broj_token  shift, and go to state 7
    id_token    shift, and go to state 8
    '{'         shift, and go to state 9

    E  go to state 25


State 15

    0 $accept: Program $end .

    $default  accept


State 16

    1 Program: Naredba ';' . Program
    2        | Naredba ';' .

    print_token  shift, and go to state 1
    check_token  shift, and go to state 2
    card_token   shift, and go to state 3
    id_token     shift, and go to state 4

    $default  reduce using rule 2 (Program)

    Program  go to state 26
    Naredba  go to state 6


State 17

    9 E: broj_token tt_token . broj_token

    broj_token  shift, and go to state 27


State 18

   15 niz_koeficijenata: broj_token .

    $default  reduce using rule 15 (niz_koeficijenata)


State 19

    8 E: '{' niz_koeficijenata . '}'
   14 niz_koeficijenata: niz_koeficijenata . ',' broj_token

    '}'  shift, and go to state 28
    ','  shift, and go to state 29


State 20

   10 E: E unija_token . E

    broj_token  shift, and go to state 7
    id_token    shift, and go to state 8
    '{'         shift, and go to state 9

    E  go to state 30


State 21

   12 E: E presek_token . E

    broj_token  shift, and go to state 7
    id_token    shift, and go to state 8
    '{'         shift, and go to state 9

    E  go to state 31


State 22

   11 E: E razlika_token . E

    broj_token  shift, and go to state 7
    id_token    shift, and go to state 8
    '{'         shift, and go to state 9

    E  go to state 32


State 23

    5 Naredba: check_token broj_token ':' . E

    broj_token  shift, and go to state 7
    id_token    shift, and go to state 8
    '{'         shift, and go to state 9

    E  go to state 33


State 24

    6 Naredba: check_token E '<' . E

    broj_token  shift, and go to state 7
    id_token    shift, and go to state 8
    '{'         shift, and go to state 9

    E  go to state 34


State 25

    4 Naredba: id_token '=' E .
   10 E: E . unija_token E
   11  | E . razlika_token E
   12  | E . presek_token E

    unija_token    shift, and go to state 20
    presek_token   shift, and go to state 21
    razlika_token  shift, and go to state 22

    $default  reduce using rule 4 (Naredba)


State 26

    1 Program: Naredba ';' Program .

    $default  reduce using rule 1 (Program)


State 27

    9 E: broj_token tt_token broj_token .

    $default  reduce using rule 9 (E)


State 28

    8 E: '{' niz_koeficijenata '}' .

    $default  reduce using rule 8 (E)


State 29

   14 niz_koeficijenata: niz_koeficijenata ',' . broj_token

    broj_token  shift, and go to state 35


State 30

   10 E: E . unija_token E
   10  | E unija_token E .
   11  | E . razlika_token E
   12  | E . presek_token E

    razlika_token  shift, and go to state 22

    $default  reduce using rule 10 (E)


State 31

   10 E: E . unija_token E
   11  | E . razlika_token E
   12  | E . presek_token E
   12  | E presek_token E .

    razlika_token  shift, and go to state 22

    $default  reduce using rule 12 (E)


State 32

   10 E: E . unija_token E
   11  | E . razlika_token E
   11  | E razlika_token E .
   12  | E . presek_token E

    $default  reduce using rule 11 (E)


State 33

    5 Naredba: check_token broj_token ':' E .
   10 E: E . unija_token E
   11  | E . razlika_token E
   12  | E . presek_token E

    unija_token    shift, and go to state 20
    presek_token   shift, and go to state 21
    razlika_token  shift, and go to state 22

    $default  reduce using rule 5 (Naredba)


State 34

    6 Naredba: check_token E '<' E .
   10 E: E . unija_token E
   11  | E . razlika_token E
   12  | E . presek_token E

    unija_token    shift, and go to state 20
    presek_token   shift, and go to state 21
    razlika_token  shift, and go to state 22

    $default  reduce using rule 6 (Naredba)


State 35

   14 niz_koeficijenata: niz_koeficijenata ',' broj_token .

    $default  reduce using rule 14 (niz_koeficijenata)
